# rusty-collars

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  partitions-16mb.csv  partitions-4mb.csv  partitions-8mb.csv  remote-control.md  sdkconfig.defaults  sdkconfig.defaults.common  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32p4-wifi  wifi.toml.example
.cargo/: config-esp32.toml  config-esp32c6.toml  config.toml
central-control/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
central-control/scripts/: build-server.mjs  dev.mjs
central-control/src/client/: api.ts  app.ts  main.css  main.ts  router.ts  state.ts  utils.ts  ws.ts
central-control/src/server/: auth.ts  boards.ts  db.ts  main.ts  permissions.ts
central-control/src/shared/: protocol.ts  types.ts
components/p4_wifi_hosted/: idf_component.yml
crates/app/: Cargo.toml
crates/app/src/: error.rs  lib.rs  repository.rs  services.rs  state.rs
crates/core/: Cargo.toml
crates/core/src/: http.rs  lib.rs  protocol.rs  rf_timing.rs  scheduling.rs  validation.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  style.css
nix/: xtensa-esp-libclang.nix  xtensa-rust-toolchain.nix
pcb/: .gitignore  rusty-collars-p4-carrier.kicad_pcb  rusty-collars-p4-carrier.kicad_pro  rusty-collars-p4-carrier.kicad_sch
scripts/: bootstrap-toolchain.sh  build-bin.sh  emulate.sh  erase-nvs.sh  esp-idf-env.sh  flash-c6-slave.sh  flash.sh  integration-test.sh  monitor.sh  ota.sh  prepare-toolchain-env.sh  select-target.sh  target-info.sh  test-all.sh
server/: package-lock.json  package.json  tsconfig.json
server/scripts/: build.mjs
server/src/: client.ts  index.ts  protocol.ts
server/src/public/: index.html
src/: app.rs  async_runtime.rs  build_info.rs  error.rs  led.rs  main.rs  mqtt.rs  net.rs  ota.rs  remote_control.rs  repository.rs  rf.rs  server.rs  storage.rs  time_sync.rs  wifi.rs
src/server/: admin.rs  context.rs  control.rs  debug.rs  http.rs  runtime.rs  state.rs  status.rs  ws.rs
src/server/control/: actions.rs  collars.rs  data.rs  presets.rs  settings.rs
ui-shared/: preset-editor.ts
(+14 files in other folders)
