[workspace]
members = ["crates/core"]

[package]
name = "rusty-collars"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rusty-collars-core = { path = "crates/core" }
esp-idf-svc = "0.52"
embedded-svc = "0.29"
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
picoserve = { version = "0.18", features = ["ws", "std"] }
async-io = "2"
async-executor = "1"
async-broadcast = "0.7"
futures-lite = "2"

[build-dependencies]
embuild = "0.33"
toml = "0.8"
flate2 = "1"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = "debuginfo"

[package.metadata.esp-idf-sys]
esp_idf_version = "v5.4.2"
esp_idf_sdkconfig_defaults = ["sdkconfig.defaults", "sdkconfig.defaults.partitions"]
# Note: the target-specific sdkconfig (e.g. sdkconfig.defaults.esp32p4) is auto-detected by esp-idf-sys

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_websocket_client", version = "1.5.0" }
